fixed hamburger menu scrolling on mobile slightly changed mobile magistracy.html

--- a/data/style.css
+++ b/data/style.css
@@ -343,7 +343,7 @@ html { font-family: 'Inter', sans-serif; }
       color: #1C3964;
       width: 25vw;
       margin-left:5vw;
-      margin-top:5vw; 
+      margin-top:6vw; 
       font-weight: 600;
   }
 
@@ -375,7 +375,7 @@ html { font-family: 'Inter', sans-serif; }
       font-weight: 600;
   }
   .kpi{
-      margin-top:5vw;
+      margin-top:4.5vw;
       font-weight: 600;
       margin-right:5vw;
   }
@@ -387,6 +387,9 @@ html { font-family: 'Inter', sans-serif; }
   .kpi .highfont{
     margin-top:10vw; 
     text-align: right;
+  }
+  .kpi a img{
+    height:7vw;
   }
   .credits{
       margin-left:4vw;
@@ -2151,8 +2154,11 @@ html { font-family: 'Inter', sans-serif; }
         font-size:3vw;
         margin-top:1vw;
         margin-left:1vw;
+        padding:0.5vw;
      }
-    .magistracyinfo2 { grid-area: 6 / 1 / 8 / 2; }
+    .magistracyinfo2 { 
+        grid-area: 6 / 1 / 8 / 2;
+     }
     .magistracyinfo2 p{
         margin-top:25vw;
         margin-left:4vw;
@@ -3439,6 +3445,9 @@ html { font-family: 'Inter', sans-serif; }
         text-decoration: none;
         background-color: white;
     }
+    .dropdown-content div p{
+        margin-top:5vw;
+    }
     
     .dropdown-content a:hover {
         color:#FFD600;
@@ -3492,7 +3501,6 @@ html { font-family: 'Inter', sans-serif; }
       .nav {
         position: fixed;
         width: 100%;
-        height: 100%;
         background-color: white;
         top: -100%; left: 0; right: 0; bottom: 0;
         overflow: hidden;
